--- a/templates/default/customer/customerassignmenthelper.html
+++ b/templates/default/customer/customerassignmenthelper.html
@@ -365,9 +365,9 @@
 																				{if !$item.single.optional} disabled data-mandatory="1"{/if}
 																				data-tariffaccess="{$item.single.authtype}">
 																				{if $promotion_show_period_values}
-																					{t a=$item.single.tariff b=moneyf($item.single.value, $item.single.currency, 3) c=implode(' / ', $item.single.periodvalues)}$a (default: $b; $c){/t}
+																					{t a=$item.single.tariff b=Utils::smartFormatMoney($item.single.value, $item.single.currency) c=implode(' / ', $item.single.periodvalues)}$a (default: $b; $c){/t}
 																				{else}
-																					{t a=$item.single.tariff b=moneyf($item.single.value, $item.single.currency, 3)}$a (default: $b){/t}
+																					{t a=$item.single.tariff b=Utils::smartFormatMoney($item.single.value, $item.single.currency)}$a (default: $b){/t}
 																				{/if}
 																			</label>
 																			<span class="schema-tariff-count">
@@ -393,14 +393,14 @@
 																						{if $period.modifiable}
 																							{textformat assign="elemid"}value-{$schemaid}-{iconv('UTF-8', 'ASCII//TRANSLIT', preg_replace('/[ _]/', '-', $label))}-{$item.single.assignmentid}-{$key}{/textformat}
 																							<input id="{$elemid}" type="text" name="{$variable_prefix}[values][{$schemaid}][{$label}][{$item.single.assignmentid}][{$key}]" class="format-3f"
-																									value="{if isset($variables.values[$schemaid][$label][$item.single.assignmentid][$key])}{$variables.values[$schemaid][$label][$item.single.assignmentid][$key]}{else}{$period.value|string_format:"%.3f"}{/if}"
+																									value="{if isset($variables.values[$schemaid][$label][$item.single.assignmentid][$key])}{$variables.values[$schemaid][$label][$item.single.assignmentid][$key]}{else}{Localisation::smartFormatNumber($period.value)}{/if}"
 																									{tip trigger=$elemid}>
-																							<i class="lms-ui-icon-restore" data-restore-selector="#{$elemid}" data-restore-value="{$period.value|string_format:"%.3f"}"></i>
+																							<i class="lms-ui-icon-restore" data-restore-selector="#{$elemid}" data-restore-value="{Localisation::smartFormatNumber($period.value)}"></i>
 																						{else}
 																							{if $period.value == ''}
 																								-
 																							{else}
-																								{$period.value|string_format:"%01.3f"}
+																								{Utils::smartFormatMoney($period.value)}
 																							{/if}
 																						{/if}
 																					</td>
@@ -424,7 +424,7 @@
 																				<option value="{$item.assignmentid}" data-tariffaccess="{$item.authtype}"
 																						data-tarifftype="{$item.type}" data-assignment-id="{$item.assignmentid}"
 																						{if in_array($item.assignmentid, (array)$variables.sassignmentid[$schemaid])} selected{/if}
-																					>{if $promotion_show_period_values}{t a=$item.tariff b=moneyf($item.value, $item.currency, 3) c=implode(' / ', $item.periodvalues)}$a (default: $b; $c){/t}{else}{t a=$item.tariff b=moneyf($item.value, $item.currency, 3)}$a (default: $b){/t}{/if}</option>
+																					>{if $promotion_show_period_values}{t a=$item.tariff b=Utils::smartFormatMoney($item.value, $item.currency) c=implode(' / ', $item.periodvalues)}$a (default: $b; $c){/t}{else}{t a=$item.tariff b=Utils::smartFormatMoney($item.value, $item.currency)}$a (default: $b){/t}{/if}</option>
 																				{/foreach}
 																			</select>
 																			<span class="schema-tariff-count">
@@ -661,7 +661,7 @@
 									<span class="bold">{trans("Discount:")}</span>
 								</TD>
 								<TD style="{if !ConfigHelper::checkConfig('privileges.superuser') && ConfigHelper::checkConfig('privileges.hide_finances')} display: none;{/if}">
-									<INPUT type="text" size="8" id="discount_value" name="{$variable_prefix}[discount]" value="{if $variables.pdiscount != 0}{$variables.pdiscount|string_format:"%01.2f"}{else}{if $variables.vdiscount != 0}{$variables.vdiscount|string_format:"%01.3f"}{/if}{/if}" {tip text="Enter discount percentage or amount" trigger="discount"}>
+									<INPUT type="text" size="8" id="discount_value" name="{$variable_prefix}[discount]" value="{if $variables.pdiscount != 0}{Localisation::formatNumber($variables.pdiscount)}{else}{if $variables.vdiscount != 0}{Localisation::smartFormatNumber($variables.vdiscount)}{/if}{/if}" {tip text="Enter discount percentage or amount" trigger="discount"}>
 									<SELECT id="discount_type" name="{$variable_prefix}[discount_type]">
 										{foreach from=$_DISCOUNTTYPES item=item key=key}
 										<OPTION value="{$key}"{if $variables.discount_type == $key} selected{/if}>{$item}</OPTION>
