improvement: some map css improvments

--- a/css/map.less
+++ b/css/map.less
@@ -42,43 +42,46 @@ div.olPopup {
 
 div.olPopupContent {
 	overflow: visible;
-	padding: 0px;
+	padding: 0;
 }
 
 div.olControlLayerSwitcher {
 	width: auto;
 }
 
-div.lmsPopupTitleBar {
+div.lms-ui-map-popup-titlebar {
 	background-color: @dark;
 	white-space: nowrap;
-	width: auto; height: 18px;
+	width: auto;
+	height: 18px;
 	overflow: visible;
 	border-left-width: 1pt; border-left-style: solid; border-top-width: 1pt; border-top-style: solid; border-right-width: 1pt; border-right-style: solid;
 	display: block;
 }
 
-div.lmsPopupTitle {
+div.lms-ui-map-popup-title {
 	background-color: @dark;
 	font-weight: bold;
 	float: left;
-	width: auto; height: 16px;
+	width: auto;
+	height: 16px;
 	line-height: 16px;
 	overflow: visible;
 	padding-left: 2px;
 }
 
-div.lmsPopupCloseBox {
+div.lms-ui-map-popup-closebox {
 	background-color: @dark;
 	float: right;
-	width: 16px; height: 16px;
+	width: 16px;
+	height: 16px;
 	padding: 1px;
 	overflow: visible;
 }
 
-div.lmsInfoPopupContents {
+div.lms-ui-map-info-popup-contents {
 	background-color: @light;
-	padding: 6px;
+	padding: 0.5em;
 	border: @frame;
 	width: auto !important;
 	height: auto;
@@ -86,7 +89,7 @@ div.lmsInfoPopupContents {
 	overflow: visible;
 }
 
-div.lmsInfoPopupName {
+div.lms-ui-map-info-popup-name {
 	background-color: @light;
 	font-weight: bold;
 	padding: 2px;
@@ -96,7 +99,7 @@ div.lmsInfoPopupName {
 	clear: both;
 }
 
-div.lmsInfoPopupAddress {
+div.lms-ui-map-info-popup-address {
 	background-color: @light;
 	padding: 2px;
 	border: none;
@@ -106,7 +109,7 @@ div.lmsInfoPopupAddress {
 	clear: both;
 }
 
-div.lmsInfoPopupDetails {
+div.lms-ui-map-info-popup-details {
 	background-color: @light;
 	padding: 2px;
 	border: none;
@@ -115,10 +118,12 @@ div.lmsInfoPopupDetails {
 	clear: both;
 }
 
-div.lmsMapPopupContents {
+div.lms-ui-map-popup-contents {
 	border: @frame;
 	background-color: @light;
-	width: auto; height: auto;
+	width: auto;
+	height: auto;
+	padding: 0.5em;
 	white-space: nowrap;
 	overflow: visible;
 
@@ -140,14 +145,14 @@ div.lmsMapPopupContents {
 	}
 }
 
-div.lmsMapPopupName {
+div.lms-ui-map-popup-name {
 	padding: 2px;
 	font-weight: bold;
 	width: auto; height: auto;
 	white-space: nowrap;
 }
 
-div.lmsMapPopupAddress {
+div.lms-ui-map-popup-address {
 	padding: 2px;
 	padding-left: 10px;
 	width: auto; height: auto;
@@ -155,48 +160,50 @@ div.lmsMapPopupAddress {
 	overflow: visible;
 }
 
-div.lmsIpPopupContents {
+div.lms-ui-map-ip-popup-contents {
 	border: @frame;
 	background-color: @light;
 	width: auto !important;
 	height: auto;
-	padding: 6px;
+	padding: 0.5em;
 	white-space: nowrap;
 	overflow: visible;
 }
 
-div.lmsIpPopupLabel {
+div.lms-ui-map-ip-popup-label {
 	font-weight: bold;
 }
 
-div.lmsPingContentsFrame {
+div.lms-ui-map-ping-contents-frame {
 	border: @frame;
-	padding: 0px;
+	padding: 0;
 	width: 450px;
 	height: 300px;
 	background-color: @light;
 }
 
-div.lmsPingContents {
+div.lms-ui-map-ping-contents {
 	position: absolute;
-	left: 0px;
-	top: 0px;
+	left: 0;
+	top: 0;
 	bottom: 48px;
 	width: 100%;
 	height: auto !important;
 	overflow: auto;
-	padding: 0px;
+	padding: 0;
 }
 
 div.olControlPanel {
 	position: absolute;
-	left: 60px; top: 5px;
+	left: 60px;
+	top: 5px;
 }
 
 .olControlPanel div {
 	display: block;
 	float: left;
-	width: 22px; height: 22px;
+	width: 22px;
+	height: 22px;
 	border: @frame;
 	margin: 1px;
 	background-position: center center;
