--- a/templates/default/ping.html
+++ b/templates/default/ping.html
@@ -1,19 +1,19 @@
 {if $part == "titlebar"}
-<div class="lmsPopupTitleBar" style="width: auto !important; width: 452px">
-	<div class="lmsPopupTitle">{t a=$ipaddr}Ping to $a{/t}</div>
-	<div id="{$popupid}_popupCloseBox" class="olPopupCloseBox lmsPopupCloseBox">&nbsp;</div>
+<div class="lms-ui-map-popup-titlebar" style="width: auto !important; width: 452px">
+	<div class="lms-ui-map-popup-title">{t a=$ipaddr}Ping to $a{/t}</div>
+	<div id="{$popupid}_popupCloseBox" class="olPopupCloseBox lms-ui-map-popup-closebox">&nbsp;</div>
 </div>
-<div class="lmsPingContentsFrame">
+<div class="lms-ui-map-ping-contents-frame">
 	<iframe id="autoiframe_{$popupid}" width="450px" height="300px" frameborder="0" framespacing="0" scrolling="no" src="?m=ping&ip={$ipaddr}&type={$type}"></iframe>
 </div>
 {elseif $part == "ipform"}
-<div class="lmsPopupTitleBar">
-	<div class="lmsPopupTitle">&nbsp;</div>
-	<div id="{$popupid}_popupCloseBox" class="olPopupCloseBox lmsPopupCloseBox">&nbsp;</div>
+<div class="lms-ui-map-popup-titlebar">
+	<div class="lms-ui-map-popup-title">&nbsp;</div>
+	<div id="{$popupid}_popupCloseBox" class="olPopupCloseBox lms-ui-map-popup-closebox">&nbsp;</div>
 </div>
-<div class="lmsIpPopupContents">
-	<div class="lmsIpPopupLabel">{trans("Enter IP address:")}</div>
-	<div class="lmsIpPopupForm">
+<div class="lms-ui-map-ip-popup-contents">
+	<div class="lms-ui-map-ip-popup-label">{trans("Enter IP address:")}</div>
+	<div class="lms-ui-map-ip-popup-form">
 		<form name="{$popupid}_ipform" id="ipform" method="GET" action="?m=ping" onsubmit="return ping_any_host('{$popupid}');">
 			<input type="text" name="ip"><br>
 			<input type="radio" id="{$popupid}_type1" name="type" value="1" checked><label for="{$popupid}_type1">icmp</label>
@@ -40,7 +40,7 @@
 {else}
 <script type="text/javascript" src="js/common.js"></script>
 <body style="overflow: auto">
-	<div id="data" class="lmsPingContents"></div>
+	<div id="data" class="lms-ui-map-ping-contents"></div>
 	<form id="params">
 	<table cellpadding="2" style="bottom: 0; position: absolute" width="100%">
 		<tr class="light">
