improvement: change column name in external IDs managment panel

--- a/templates/default/customer/customerextidlist.html
+++ b/templates/default/customer/customerextidlist.html
@@ -4,7 +4,7 @@
             <strong>{trans("ID in external system")}</strong>
         </div>
         <div class="lms-ui-tab-table-column extid">
-            <strong>{trans("External system")}</strong>
+            <strong>{trans("Service provider")}</strong>
         </div>
     </div>
     <div class="lms-ui-tab-table-column buttons">
