--- a/templates/default/customer/customerextids.html
+++ b/templates/default/customer/customerextids.html
@@ -28,7 +28,7 @@
                 </div>
 
                 <div id="add-extid-providerid">
-                    <strong>{trans("External system")}</strong>
+                    <strong>{trans("Service provider")}</strong>
                 </div>
 
                 {button type="link" icon="save" id="customer-extid-add-button"
