improvement: add some changes for billing list presentation (#2365)

--- a/userpanel/modules/voip/templates/billing.html
+++ b/userpanel/modules/voip/templates/billing.html
@@ -208,8 +208,8 @@
                                 <td>
                                     <select size="1" name="ftype" class="lms-input">
                                         <option value="">{trans("— all —")}</option>
-                                        <option value="{$smarty.const.BILLING_RECORD_TYPE_CALL}"
-                                            {if is_numeric($params.ftype) && $params.ftype == $smarty.const.BILLING_RECORD_TYPE_CALL} selected{/if}>{trans("<!voip>call")}</option>
+                                        <option value="{$smarty.const.BILLING_RECORD_TYPE_VOICE_CALL}"
+                                            {if is_numeric($params.ftype) && $params.ftype == $smarty.const.BILLING_RECORD_TYPE_VOICE_CALL} selected{/if}>{trans("<!voip>call")}</option>
                                         <option value="{$smarty.const.BILLING_RECORD_TYPE_SMS}"
                                             {if $params.ftype == $smarty.const.BILLING_RECORD_TYPE_SMS} selected{/if}>{trans("<!voip>SMS")}</option>
                                         <option value="{$smarty.const.BILLING_RECORD_TYPE_MMS}"
@@ -229,6 +229,8 @@
                                             {if $params.fstatus == $smarty.const.BILLING_RECORD_STATUS_BUSY} selected{/if}>{trans("<!voip>busy")}</option>
                                         <option value="{$smarty.const.BILLING_RECORD_STATUS_SERVER_FAILED}"
                                             {if $params.fstatus == $smarty.const.BILLING_RECORD_STATUS_SERVER_FAILED} selected{/if}>{trans("server error")}</option>
+                                        <option value="{$smarty.const.BILLING_RECORD_STATUS_UNKNOWN}"
+                                                {if $params.fstatus == $smarty.const.BILLING_RECORD_STATUS_UNKNOWN} selected{/if}>{trans("unknown")}</option>
                                     </select>
                                 </td>
                             </TR>
@@ -272,14 +274,14 @@
                                         <TD>{$billings[i].caller}</TD>
                                         <TD>{$billings[i].callee}</TD>
                                         <td>
-                                            {if $billings[i].type == $smarty.const.BILLING_RECORD_TYPE_CALL}
+                                            {if $billings[i].type == $smarty.const.BILLING_RECORD_TYPE_VOICE_CALL}
                                                 {$billings[i].totaltime|duration_format}
                                             {else}
                                                 -
                                             {/if}
                                         </td>
                                         <td>
-                                            {if $billings[i].type == $smarty.const.BILLING_RECORD_TYPE_CALL}
+                                            {if $billings[i].type == $smarty.const.BILLING_RECORD_TYPE_VOICE_CALL}
                                                 {$billings[i].billedtime|duration_format}
                                             {elseif $billings[i].type = $smarty.const.BILLING_RECORD_TYPE_DATA_TRANSFER}
                                                 {$billings[i].billedtime|size_format}
@@ -291,7 +293,7 @@
                                             {if $billings[i].type == $smarty.const.BILLING_RECORD_TYPE_DATA_TRANSFER}
                                                 {trans("<!voip>data transfer")}
                                             {elseif $billings[i].direction == $smarty.const.BILLING_RECORD_DIRECTION_OUTGOING}
-                                                {if $billings[i].type == $smarty.const.BILLING_RECORD_TYPE_CALL}
+                                                {if $billings[i].type == $smarty.const.BILLING_RECORD_TYPE_VOICE_CALL}
                                                     {trans("<!voip>outgoing call")}
                                                 {elseif $billings[i].type == $smarty.const.BILLING_RECORD_TYPE_SMS}
                                                     {trans("<!voip>outgoing SMS")}
@@ -299,7 +301,7 @@
                                                     {trans("<!voip>outgoing MMS")}
                                                 {/if}
                                             {elseif $billings[i].direction == $smarty.const.BILLING_RECORD_DIRECTION_INCOMING}
-                                                {if $billings[i].type == $smarty.const.BILLING_RECORD_TYPE_CALL}
+                                                {if $billings[i].type == $smarty.const.BILLING_RECORD_TYPE_VOICE_CALL}
                                                     {trans("<!voip>incoming call")}
                                                 {elseif $billings[i].type == $smarty.const.BILLING_RECORD_TYPE_SMS}
                                                     {trans("<!voip>incoming SMS")}
