--- a/templates/default/voipaccount/voipaccountbillinglist.html
+++ b/templates/default/voipaccount/voipaccountbillinglist.html
@@ -181,14 +181,16 @@
 					<span>{trans("<!voip>Type")}</span>
 					<select size="1" name="ftype" form="choosefilter">
 						<option value="">{trans("— all —")}</option>
-						<option value="{$smarty.const.BILLING_RECORD_TYPE_CALL}"
-							{if is_numeric($listdata.ftype) && $listdata.ftype == $smarty.const.BILLING_RECORD_TYPE_CALL} selected{/if}>{trans("<!voip>call")}</option>
+						<option value="{$smarty.const.BILLING_RECORD_TYPE_VOICE_CALL}"
+							{if is_numeric($listdata.ftype) && $listdata.ftype == $smarty.const.BILLING_RECORD_TYPE_VOICE_CALL} selected{/if}>{trans("<!voip>call")}</option>
 						<option value="{$smarty.const.BILLING_RECORD_TYPE_SMS}"
 							{if $listdata.ftype == $smarty.const.BILLING_RECORD_TYPE_SMS} selected{/if}>{trans("<!voip>SMS")}</option>
 						<option value="{$smarty.const.BILLING_RECORD_TYPE_MMS}"
 							{if $listdata.ftype == $smarty.const.BILLING_RECORD_TYPE_MMS} selected{/if}>{trans("<!voip>MMS")}</option>
 						<option value="{$smarty.const.BILLING_RECORD_TYPE_DATA_TRANSFER}"
 							{if $listdata.ftype == $smarty.const.BILLING_RECORD_TYPE_DATA_TRANSFER} selected{/if}>{trans("<!voip>data transfer")}</option>
+						<option value="{$smarty.const.BILLING_RECORD_TYPE_VIDEO}"
+								{if $listdata.ftype == $smarty.const.BILLING_RECORD_TYPE_VIDEO} selected{/if}>{trans("<!voip>video")}</option>
 					</select>
 
 					<span>{trans("<!voip>Status")}</span>
@@ -202,6 +204,8 @@
 							{if $listdata.fstatus == $smarty.const.BILLING_RECORD_STATUS_BUSY} selected{/if}>{trans("<!voip>busy")}</option>
 						<option value="{$smarty.const.BILLING_RECORD_STATUS_SERVER_FAILED}"
 							{if $listdata.fstatus == $smarty.const.BILLING_RECORD_STATUS_SERVER_FAILED} selected{/if}>{trans("server error")}</option>
+						<option value="{$smarty.const.BILLING_RECORD_STATUS_UNKNOWN}"
+								{if $listdata.fstatus == $smarty.const.BILLING_RECORD_STATUS_UNKNOWN} selected{/if}>{trans("unknown")}</option>
 					</select>
 					{button type="link" icon="next" onclick="$('#choosefilter').submit()"}
 				</div>
@@ -260,13 +264,15 @@
 				<td>
 					{if !empty($record.calleeownerid)}
 						<a href="?m=voipaccountinfo&amp;id={$record.calleevoipaccountid}">{$record.callee}</a>
-					{else}
+					{elseif !empty($record.callee)}
 						{$record.callee}
+					{else}
+						-
 					{/if}
 				</td>
 
 				<td>
-					{if $record.type == $smarty.const.BILLING_RECORD_TYPE_CALL}
+					{if $record.type == $smarty.const.BILLING_RECORD_TYPE_VOICE_CALL}
 						{$record.totaltime|duration_format}
 					{else}
 						-
@@ -274,10 +280,12 @@
 				</td>
 
 				<td>
-					{if $record.type == $smarty.const.BILLING_RECORD_TYPE_CALL}
+					{if $record.type == $smarty.const.BILLING_RECORD_TYPE_VOICE_CALL}
 						{$record.billedtime|duration_format}
-					{elseif $record.type = $smarty.const.BILLING_RECORD_TYPE_DATA_TRANSFER}
+					{elseif $record.type == $smarty.const.BILLING_RECORD_TYPE_DATA_TRANSFER}
 						{$record.billedtime|size_format}
+					{elseif $record.type == $smarty.const.BILLING_RECORD_TYPE_SMS}
+						{$record.billedtime}
 					{else}
 						-
 					{/if}
@@ -287,7 +295,7 @@
 					{if $record.type == $smarty.const.BILLING_RECORD_TYPE_DATA_TRANSFER}
 						{trans("<!voip>data transfer")}
 					{elseif $record.direction == $smarty.const.BILLING_RECORD_DIRECTION_OUTGOING}
-						{if $record.type == $smarty.const.BILLING_RECORD_TYPE_CALL}
+						{if $record.type == $smarty.const.BILLING_RECORD_TYPE_VOICE_CALL}
 							{trans("<!voip>outgoing call")}
 						{elseif $record.type == $smarty.const.BILLING_RECORD_TYPE_SMS}
 							{trans("<!voip>outgoing SMS")}
@@ -295,7 +303,7 @@
 							{trans("<!voip>outgoing MMS")}
 						{/if}
 					{elseif $record.direction == $smarty.const.BILLING_RECORD_DIRECTION_INCOMING}
-						{if $record.type == $smarty.const.BILLING_RECORD_TYPE_CALL}
+						{if $record.type == $smarty.const.BILLING_RECORD_TYPE_VOICE_CALL}
 							{trans("<!voip>incoming call")}
 						{elseif $record.type == $smarty.const.BILLING_RECORD_TYPE_SMS}
 							{trans("<!voip>incoming SMS")}
@@ -314,6 +322,8 @@
 						{trans("no answer")}
 					{elseif $record.status == $smarty.const.BILLING_RECORD_STATUS_SERVER_FAILED}
 						{trans("server error")}
+					{elseif $record.status == $smarty.const.BILLING_RECORD_STATUS_UNKNOWN}
+						{trans("unknown")}
 					{/if}
 				</td>
 
