--- a/templates/default/choose/chooselocation.html
+++ b/templates/default/choose/chooselocation.html
@@ -124,7 +124,7 @@
 					<option value="0"></option>
 				{/if}
 				{foreach $cities as $item}
-					<option value="{$item.id}">{$item.name}</option>
+					<option value="{$item.id}" data-terc="{$item.terc}" data-simc="{$item.simc}">{$item.name}</option>
 				{/foreach}
 			</select>
 		</td>
@@ -134,7 +134,12 @@
 		<td>
 			<select id="street_sel" name="street" class="location-property-selection" {tip text="Select street"}>
 				{foreach $streets as $street}
-				<option value="{$street.id}" data-street-type="{$street.typename}" data-street-name-1="{$street.name1|escape}"{if $street.name2} data-street-name-2="{$street.name2|escape}"{/if}>{$street.name}</option>
+					<option value="{$street.id}"
+						data-street-type="{$street.typename}"
+						data-street-name-1="{$street.name1|escape}"
+						data-ulic="{$street.ulic}"
+						{if $street.name2} data-street-name-2="{$street.name2|escape}"{/if}
+					>{$street.name}</option>
 				{/foreach}
 			</select>
 		</td>
@@ -276,11 +281,14 @@ function submit_location() {
     // SET CITY
     input_str = city.val() ? city.find('option:selected').text() : '';
 
+	var city_option = $('option:selected', city);
     if ( input_str && /^([^(]+)/.test(input_str) )  {
         tmp = RegExp.$1.replace(/\s+$/, '');
 
         location_box.find( "input[data-address='city']"        ).val(tmp);
-        location_box.find( "input[data-address='city-hidden']" ).val(city.val());
+        location_box.find( "input[data-address='city-hidden']" ).val(city_option.val());
+		location_box.find( "input[data-address='terc']" ).val(city_option.attr('data-terc'));
+        location_box.find( "input[data-address='simc']" ).val(city_option.attr('data-simc'));
         // automatically preselect 'Poland' country when we submit territized location
         location_box.find( "select[data-address='country']").val(2);
     }
@@ -310,6 +318,7 @@ function submit_location() {
 
 		location_box.find( "input[data-address='street']"        ).val( street );
         location_box.find( "input[data-address='street-hidden']" ).val( street_option.val() );
+		location_box.find( "input[data-address='ulic']" ).val( street_option.attr('data-ulic') );
     } else {
         location_box.find( "input[data-address='street']"        ).val( '' );
         location_box.find( "input[data-address='street-hidden']" ).val( '' );
@@ -323,8 +332,9 @@ function submit_location() {
     //location_box.find( "input[data-address='location-name']" ).val( $( '#location-name' ).val() );
 
     // SET STATE
-    location_box.find( "input[data-address='state']"        ).val(state.find('option:selected').text());
-    location_box.find( "input[data-address='state-hidden']" ).val(state.val());
+	var state_option = $('option:selected', state);
+    location_box.find( "input[data-address='state']"        ).val(state_option.text());
+    location_box.find( "input[data-address='state-hidden']" ).val(state_option.val());
 
     // UPDATE ADDRESS STRING
     parent.$( '#{$data.boxid}' ).find('input').first().trigger('input');
